<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Z kim na basen?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_dupa">DUPA</string>
    <string name="title_activity_nowe_wydarzenie">Nowe wydarzenie</string>
    <string name="nazwa">Nazwa</string>
    <string name="data">Data</string>
    <string name="adres">Adres</string>
    <string name="dodaj">Dodaj</string>
    <string name="zapisz">Zapisz</string>
    <string name="godzina">Godzina</string>
    <string name="godzinaRozpoczecia">Godzina rozpoczęcia</string>
    <string name="godzinaZakonczenia">Godzina zakończenia</string>
    <string name="lokalizacja">Lokalizacja</string>
    <string name="zaprosZnajomych">Zaproś znajomych</string>
    <string name="noweWydarzenie">Nowe wydarzenie</string>
    <string name="title_activity_edycja_wydarzenia">EdycjaWydarzenia</string>
    <string name="title_activity_szczegoly_wydarzenia">SzczegolyWydarzenia</string>
    <string name="otwarte">Otwarte</string>
    <string name="title_activity_wydarzenia_">Wydarzenia_Activity</string>
    <string name="title_activity_wydarzenia">Wydarzenia</string>
    <string name="title_activity_wydarzenia_lista">WydarzeniaLista</string>
    <string name="penis_str">penis</string>
    <string name="nickLubNumer">nick lub numer telefonu</string>
    <string name="haslo">hasło</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="utworzKonto">Utwórz konto</string>
    <string name="nick">nick</string>
    <string name="numerTelefonu">numer telefonu</string>
    <string name="powtorzHaslo">powtórz hasło</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="logowanie">Logowanie</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="mapa">Mapa</string>
    <string name="label_nazwa_wydarzenia">Nazwa wydarzenia:</string>
    <string name="label_tworca_wydarzenia">Utworzone przez:</string>
    <string name="label_od">Od:</string>
    <string name="label_do">Do:</string>
    <string name="label_zaproszeni">Zaproszeni:</string>
    <string name="label_data">Data</string>
    <string name="label_opis">Opis:</string>
    <string name="kategoria">Kategoria</string>
    <string name="veturillo">Veturilo</string>
    <string name="szukaj">Szukaj</string>
    <string name="ok">OK</string>
    <string name="znajdz">Znajdź</string>
    <string name="opis">Podaj opis..</string>
    <string name="textDialog">Czy chcesz zapisać lokalizację, by była dostępna dla innych użytkowników?</string>
    <string name="skad">Skąd?</string>
    <string name="stacjaZRowerami">Stacja z dostępnymi rowerami</string>
    <string name="znajdzTrase">Znajdź trasę</string>
    <string name="wyznaczTrase">Wyznacz trasę</string>
    <string name="pobierzLokalizacje">Pobierz moją lokalizację</string>
    <string name="btn_nowe_wydarzenie">Nowe wydarzenie</string>
    <string name="btn_wyswietlanie">Wyświetlanie</string>
    <string name="lbl_moje_wydarzenia">Moje wydarzenia</string>
	<string name="opiss">Opis</string>
    <string name="wyczyscDane">Wyczyść dane</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="btn_edytuj">Edytuj</string>
    <string name="btn_usun">Usuń</string>
    <string name="img_rowDesc">status</string>
    <string name="tv_rowDesc">TextView_PINDOLINO</string>
    <string name="label_lokalizacja">Lokalizacja:</string>
    <string name="btn_mapa">Mapa</string>
    <string name="btn_veturilo">Veturilo</string>
    <string name="label_zaloguj">Zaloguj się</string>
    <string name="label_zarejestruj_sie">Zarejestruj się</string>

</resources>
