<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutNowe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top|fill_vertical|center"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tv_nazwa_wydarzenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:singleLine="true"
        android:text="@string/penis_str"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/horiz_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/vertic1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_tworca_wydarzenia"
                style="@style/tv_lbl"
                android:text="@string/label_tworca_wydarzenia" />

            <TextView
                android:id="@+id/textView6"
                style="@style/tv_lbl"
                android:text="@string/label_data" />

            <TextView
                android:id="@+id/textView3"
                style="@style/tv_lbl"
                android:text="@string/label_od" />

            <TextView
                android:id="@+id/textView4"
                style="@style/tv_lbl"
                android:text="@string/label_do" />
            
            <TextView
                android:id="@+id/lbl_lokalizacja"
                style="@style/tv_lbl"
                android:text="@string/label_lokalizacja" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vertic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_tworca"
                style="@style/tv_text"
                android:text="@string/penis_str" />

            <TextView
                android:id="@+id/tv_data"
                style="@style/tv_text" />

            <TextView
                android:id="@+id/tv_od"
                style="@style/tv_text" />

            <TextView
                android:id="@+id/tv_do"
                style="@style/tv_text" />
            
            <TextView
                android:id="@+id/tv_lokalizacja"
                style="@style/tv_text" />
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0" >

        <Button
            android:id="@+id/btn_mapa"
            style="@style/button"
            android:text="@string/btn_mapa" />

        <Button
            android:id="@+id/btn_veturilo"
            style="@style/button"
            android:text="@string/btn_veturilo" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView8"
        style="@style/tv_lbl"
        android:layout_gravity="left"
        android:text="@string/label_opis" />

    <TextView
        android:id="@+id/tv_opis"
        style="@style/tv_text"
        android:singleLine="false" />

    <TextView
        android:id="@+id/tv_zaproszeni"
        style="@style/tv_lbl"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:text="@string/label_zaproszeni" />

    <ListView
        android:id="@+id/lv_prostalista"
        style="@style/lista_rozb" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/btn_edytuj"
            style="@style/button"
            android:text="@string/btn_edytuj" />

        <Button
            android:id="@+id/btn_usun"
            style="@style/button"
            android:text="@string/btn_usun" />
    </LinearLayout>

</LinearLayout>