<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutLog"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="top|fill_vertical|center"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/lbl_zaloguj"
        style="@style/tv_lbl"
        android:layout_marginTop="25dp"
        android:text="@string/label_zaloguj"
        android:textSize="25sp" />
    
    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/nickLubNumer"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/haslo"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/utworzKonto"
            style="@style/button"
            android:text="@string/utworzKonto" />

        <Button
            android:id="@+id/zaloguj"
            style="@style/button"
            android:text="@string/zaloguj" />
    </LinearLayout>

</LinearLayout>