<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutNowe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textDestination"
        style="@style/tv_lbl"
        android:layout_marginBottom="25dp"
        android:singleLine="false"
        android:textSize="@dimen/naglowek_text" 
        android:text="@string/demo_str"/>

    <Button
        android:id="@+id/btnOrigin"
        style="@style/button_single_long"
        android:text="@string/skad" />
    
    

    <CheckBox
        android:id="@+id/checkBoxMojaLokalizacja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pobierzLokalizacje" />
    
    <CheckBox
        android:id="@+id/checkBoxRowery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stacjaZRowerami" />

    <Button
        android:id="@+id/btnWyznacz"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:text="@string/wyznaczTrase" />

</LinearLayout>