<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABCDEF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="Dziecioly.zkimnabasen.NoweWydarzenie" >

    <EditText
        android:id="@+id/nazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="14dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/nazwa" />

    <Button
        android:id="@+id/zapisz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nazwa"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/zaprosZnajomych"
        android:layout_marginBottom="37dp"
        android:text="@string/zapisz" />

    <EditText
        android:id="@+id/lokalizacja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nazwa"
        android:layout_below="@+id/nazwa"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/lokalizacja" />

    <Button
        android:id="@+id/godzinaRozpoczecia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lokalizacja"
        android:layout_alignRight="@+id/lokalizacja"
        android:layout_below="@+id/data"
        android:text="@string/godzinaRozpoczecia" />

    <Button
        android:id="@+id/godzinaZakonczenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lokalizacja"
        android:layout_alignRight="@+id/godzinaRozpoczecia"
        android:layout_below="@+id/godzinaRozpoczecia"
        android:text="@string/godzinaZakonczenia" />

    <Button
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/godzinaRozpoczecia"
        android:layout_alignRight="@+id/lokalizacja"
        android:layout_below="@+id/lokalizacja"
        android:layout_marginTop="14dp"
        android:text="@string/data" />

    <Button
        android:id="@+id/zaprosZnajomych"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/godzinaZakonczenia"
        android:layout_alignRight="@+id/godzinaZakonczenia"
        android:layout_below="@+id/godzinaZakonczenia"
        android:text="@string/zaprosZnajomych" />

</RelativeLayout>