<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABCDEF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="Dziecioly.zkimnabasen.activity.Rejestracja" >

    <EditText
        android:id="@+id/podajHaslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/powtorzHaslo"
        android:layout_alignLeft="@+id/nick"
        android:layout_marginBottom="28dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/haslo" />

    <EditText
        android:id="@+id/numerTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/podajHaslo"
        android:layout_alignLeft="@+id/podajHaslo"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/numerTelefonu" />

    <EditText
        android:id="@+id/nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numerTel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/nick" />

    <EditText
        android:id="@+id/powtorzHaslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/podajHaslo"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/powtorzHaslo" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/zarejestruj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/powtorzHaslo"
        android:layout_alignRight="@+id/powtorzHaslo"
        android:layout_below="@+id/powtorzHaslo"
        android:layout_marginTop="37dp"
        android:text="@string/zarejestruj" />

</RelativeLayout>