<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutNowe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top|fill_vertical|center"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tv_tworca_wydarzenia"
        style="@style/tv_naglowek"
        android:text="@string/lbl_moje_wydarzenia" />

    <ListView
        android:id="@+id/lv_prostalista"
		style="@style/lista_rozb" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/btn_nowe_wydarzenie"
            style="@style/button"
            android:text="@string/btn_nowe_wydarzenie" />

        <Button
            android:id="@+id/btn_wyswietlanie"
            style="@style/button"
            android:text="@string/btn_wyswietlanie" />
    </LinearLayout>

</LinearLayout>