<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="Dziecioly.zkimnabasen.activity.MojKalendarz" >

    <Button
        android:id="@+id/btnNoweWydarzenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/noweWydarzenie" />

    <Button
        android:id="@+id/btnListaWydarzen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNoweWydarzenie"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/penis_str" />

    <Button
        android:id="@+id/btnLogowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnListaWydarzen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/logowanie" />

</RelativeLayout>